# slm-council

./: .env.example  .gitignore  Dockerfile  Dockerfile.vllm  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  test.py
deploy/terraform/: main.tf  outputs.tf  variables.tf
deploy/vertex_ai/: deploy_agents.py  endpoint_config.yaml
src/slm_council/: __init__.py  __main__.py  config.py  models.py  server.py  test.py
src/slm_council/agents/: __init__.py  base.py  debugger.py  generator.py  optimizer.py  planner.py  refactorer.py  registry.py  researcher.py  reviewer.py  tester.py
src/slm_council/feedback/: __init__.py  base.py
src/slm_council/knowledge/: __init__.py  base.py  style.py
src/slm_council/orchestrator/: __init__.py  brain.py  dag.py  loop.py
src/slm_council/utils/: logging.py  prompts.py
tests/: test_agents.py  test_models.py  test_orchestrator.py  tmp_simple_cases.py
